--- a/gasmachat/style.css
+++ b/gasmachat/style.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Ropa+Sans");
 body {
-  background: black;
+  background: transparent;
   color: white;
   font-family: sans-serif;
   font-size: 18px;
